--- a/index.html
+++ b/index.html
@@ -10,7 +10,40 @@
 </head>
 
 <body>
-    <h1>Hello World </h1>
+    <header>
+        <div class="container">
+            <div class="navbar">
+                <div class="logo">
+                    <a href="./">Logo</a>
+                </div>
+                <ul>
+                    <li><a class="active" href="#">О нас</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+                <div class="btn">
+                    <button>Написать в WhatsApp</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="content">
+        <div class="container">
+            <div class="content-wrap">
+                <div class="content-desc">
+                    <h1>Услуги сантехника и электрика в Бишкеке</h1>
+                    <p>Мы оказываем услуги по отоплению, водоснабжению, обвязке колодцев и скважин, монтажу котельных. Занимаемся установкой и заменой сантехники в городских квартирах и частных домах.</p>
+                    <div class="btn">
+                        <button>Вызвать мастера</button>
+                    </div>
+                </div>
+                <div class="content-img">
+                    <img src="./assets/img/content.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
