Did the mini cards about our benefits

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Услуги сантехники и электрика</title>
 </head>
 
+<!-- https://plumbit.strongholdthemes.com/demos/demo1/about/ -->
+
 <body>
     <header>
         <div class="container">
@@ -35,13 +37,38 @@
                     <h1>Услуги сантехника и электрика в Бишкеке</h1>
                     <p>Мы оказываем услуги по отоплению, водоснабжению, обвязке колодцев и скважин, монтажу котельных. Занимаемся установкой и заменой сантехники в городских квартирах и частных домах.</p>
                     <div class="btn">
-                        <button>Вызвать мастера</button>
+                        <button class="blink">Вызвать мастера</button>
                     </div>
                 </div>
                 <div class="content-img">
                     <img src="./assets/img/content.png" alt="">
                 </div>
             </div>
+            <div class="content-cards">
+                <div class="content-cards__wrap">
+                    <div class="content-cards__item">
+                        <img src="./assets/img/plumb-icon1.png" alt="">
+                        <h4>Общее обслуживание сантехники</h4>
+                        <p>Течет кран? Забитый унитаз? Предлагаем широкий спектр услуг по ремонту сантехники.</p>
+                    </div>
+
+                    <div class="content-cards__item">
+                        <img src="./assets/img/plumb-icon1.png" alt="">
+                        <h4>Круглосуточная служба сантехники</h4>
+                        <p>Независимо от того, в какое время или день вы находитесь на вызове, чтобы служить вам.</p>
+                    </div>
+                    <div class="content-cards__item">
+                        <img src="./assets/img/plumb-icon1.png" alt="">
+                        <h4>Сантехника и оборудование</h4>
+                        <p>У нас представлен широкий ассортимент сантехники на любой вкус.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <div class="container">
+            <h1>О нас</h1>
         </div>
     </section>
 </body>
