Did the About page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="content-img">
-                    <img src="./assets/img/content.png" alt="">
+                    <img src="./assets/img/plumber.webp" alt="">
                 </div>
             </div>
             <div class="content-cards">
@@ -66,9 +66,29 @@
             </div>
         </div>
     </section>
-    <section id="about">
+    <section id="services" class="desc">
         <div class="container">
-            <h1>О нас</h1>
+            <h5>Наши услуги</h5>
+            <h1>Мы оказываем услуги</h1>
+        </div>
+    </section>
+    <section id="about" class="desc">
+        <div class="container">
+            <div class="about-wrap">
+                <div class="about-wrap__txt">
+                    <h5>О нас</h5>
+                    <h1>Lorem ipsum dolor sit amet <span>consectetur</span>, adipisicing elit.</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste dolore corporis beatae voluptatum repellat similique cupiditate 
+                        dignissimos nostrum pariatur nisi, harum, asperiores laborum, aut maiores aliquam ex ipsam voluptatibus repellendus!<br/><br/>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste dolore corporis beatae voluptatum repellat similique cupiditate 
+                        dignissimos nostrum pariatur nisi.
+                    </p>
+                    <div class="btn"><button>Оставить заявку</button></div>
+                </div>
+                <div class="about-wrap__img">
+                    <img src="./assets/img/plumber-team.webp" alt="О нас">
+                </div>
+            </div>
         </div>
     </section>
 </body>
