--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Услуги сантехники и электрика</title>
+    <title>Услуги сантехника и электрика</title>
 </head>
 
 <!-- https://plumbit.strongholdthemes.com/demos/demo1/about/ -->
 
 <body>
+    <div class="top">
+        <div class="container">
+            <div class="top-wrap">
+                <div class="top-wrap__item">
+                    <div class="switch">
+                        <div class="switch-item"></div>
+                    </div>
+                </div>
+                <div class="top-wrap__item"></div>
+            </div>
+        </div>
+    </div>
     <header>
         <div class="container">
             <div class="navbar">
@@ -19,10 +31,10 @@
                     <a href="./">Logo</a>
                 </div>
                 <ul>
-                    <li><a class="active" href="#">О нас</a></li>
-                    <li><a href="#">Услуги</a></li>
+                    <li><a class="active" href="#about">О нас</a></li>
+                    <li><a href="#services">Услуги</a></li>
                     <li><a href="#">Отзывы</a></li>
-                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
                 <div class="btn">
                     <button>Написать в WhatsApp</button>
@@ -34,7 +46,7 @@
         <div class="container">
             <div class="content-wrap">
                 <div class="content-desc">
-                    <h1>Услуги сантехника и электрика в Бишкеке</h1>
+                    <h1>Услуги сантехника и электрика, чистка канализаций в Бишкеке</h1>
                     <p>Мы оказываем услуги по отоплению, водоснабжению, обвязке колодцев и скважин, монтажу котельных. Занимаемся установкой и заменой сантехники в городских квартирах и частных домах.</p>
                     <div class="btn">
                         <button class="blink">Вызвать мастера</button>
@@ -71,7 +83,7 @@
             <div class="about-wrap">
                 <div class="about-wrap__txt">
                     <h5>О нас</h5>
-                    <h1>Lorem ipsum dolor sit amet <span>consectetur</span>, adipisicing elit.</h1>
+                    <h1>Мы оказываем услуги <span>сантехники</span> в городе Бишкек.</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste dolore corporis beatae voluptatum repellat similique cupiditate 
                         dignissimos nostrum pariatur nisi, harum, asperiores laborum, aut maiores aliquam ex ipsam voluptatibus repellendus!<br/><br/>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste dolore corporis beatae voluptatum repellat similique cupiditate 
@@ -206,7 +218,7 @@
                             <input type="tel">
                         </div>
                         <div class="form-item">
-                            <div class="form-title">Адрес</div>
+                            <div class="form-title">Адрес:</div>
                             <select name="region" id="region">
                                 <option value="Ленинский">Ленинский</option>
                                 <option value="Октябрский">Октябрский</option>
@@ -215,7 +227,7 @@
                             </select>
                         </div>
                         <div class="form-item">
-                            <div class="form-title">Комментарии</div>
+                            <div class="form-title">Комментарий:</div>
                             <textarea name="" id="" cols="30" rows="3" resize="none"></textarea>
                         </div>
                         <div class="form-item">
@@ -243,8 +255,8 @@
                     </ul>
                 </div>
             </div>
-            <p></p>
         </div>
+        <p>Все права защищены, Бишкек 2023, "Ихлас-Мастер".</p>
     </footer>
 
 </body>
