Created the section Reviews

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Услуги сантехника и электрика</title>
 </head>
@@ -60,7 +61,7 @@
                 <ul>
                     <li><a class="active" href="#about">О нас</a></li>
                     <li><a href="#services">Услуги</a></li>
-                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#reviews">Отзывы</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
                 <div class="btn">
@@ -207,6 +208,121 @@
             <div class="btn"><button>Узнать подробнее у мастера</button></div>
         </div>
     </section>
+    <section id="reviews" class="desc">
+        <div class="container">
+            <h5>Отзывы наших клиентов</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veniam excepturi nulla recusandae, adipisci officia 
+                sequi neque modi!
+            </p>
+        </div>
+        <div class="reviews-wrap">
+            <div class="reviews-slider">
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla impedit suscipit esse reprehenderit mollitia
+                        beatae quam eius dolorem? Delectus quas alias, autem tenetur tempore beatae sed optio ratione illum nemo."
+                    </p>
+                </div>
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla impedit suscipit esse reprehenderit mollitia"
+                    </p>
+                </div>
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum. Nulla impedit suscipit esse reprehenderit mollitia
+                        beatae quam eius dolorem? Delectus quas alias, autem tenetur sed optio ratione illum nemo."
+                    </p>
+                </div>
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla impedit suscipit esse reprehenderit mollitia, autem tenetur tempore beatae sed optio ratione illum nemo."
+                    </p>
+                </div>
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla impedit suscipit esse reprehenderit mollitia
+                         beatae sed optio ratione illum nemo."
+                    </p>
+                </div>
+                <div class="reviews-slide">
+                    <div class="reviews-head">
+                        <div class="ava">
+                            <img src="./assets/img/ava.png" alt="avatar">
+                        </div>
+                        <div class="about">
+                            <h4>Жоламан Бейшеналиев</h4>
+                            <span>beishenaliev1989@gmail.com</span>
+                        </div>
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla impedit suscipit esse reprehenderit mollitia
+                         tempore beatae sed optio ratione illum nemo."
+                    </p>
+                </div>
+            </div>
+            <ul class="arrows">
+                <li class="prev">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                        <path d="M32 15H3.41l8.29-8.29-1.41-1.42-10 10a1 1 0 0 0 0 1.41l10 10 1.41-1.41L3.41 17H32z" data-name="4-Arrow Left"/>
+                    </svg>
+                </li>
+                <li class="next">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                        <path d="m31.71 15.29-10-10-1.42 1.42 8.3 8.29H0v2h28.59l-8.29 8.29 1.41 1.41 10-10a1 1 0 0 0 0-1.41z" data-name="3-Arrow Right"/>
+                    </svg>
+                </li>
+            </ul>
+            <div class="btn">
+                <button class="blink">Оставить отзыв</button>
+            </div>
+        </div>
+    </section>
     <section id="contacts"  class="desc">
         <div class="container">
             <h5>Наши контакты</h5>
@@ -275,16 +391,50 @@
                 </div>
                 <div class="footer-links">
                     <ul>
-                        <li><a href="#">О нас</a></li>  
-                        <li><a href="#">Услуги</a></li>
-                        <li><a href="#">Отзывы</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#about">О нас</a></li>  
+                        <li><a href="#services">Услуги</a></li>
+                        <li><a href="#reviews">Отзывы</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <p>Все права защищены, Бишкек 2023, "Ихлас-Мастер".</p>
     </footer>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.reviews-slider').slick({
+                centerMode: true,
+                centerPadding: '60px',
+                slidesToShow: 3,
+                prevArrow: $('.prev'),
+                nextArrow: $('.next'),
+                // responsive: [
+                //     {
+                //     breakpoint: 768,
+                //     settings: {
+                //         arrows: false,
+                //         centerMode: true,
+                //         centerPadding: '40px',
+                //         slidesToShow: 3
+                //     }
+                //     },
+                //     {
+                //     breakpoint: 480,
+                //     settings: {
+                //         arrows: false,
+                //         centerMode: true,
+                //         centerPadding: '40px',
+                //         slidesToShow: 1
+                //     }
+                //     }
+                // ]
+                });
+            });
+    </script>
 
 </body>
 
