--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                         <a href="#">Написать в WhatsApp</a>
                     </div>
                 </div>
+                <div class="burger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
         </div>
     </header>
@@ -448,26 +453,22 @@
                 slidesToShow: 3,
                 prevArrow: $('.prev'),
                 nextArrow: $('.next'),
-                // responsive: [
-                //     {
-                //     breakpoint: 768,
-                //     settings: {
-                //         arrows: false,
-                //         centerMode: true,
-                //         centerPadding: '40px',
-                //         slidesToShow: 3
-                //     }
-                //     },
-                //     {
-                //     breakpoint: 480,
-                //     settings: {
-                //         arrows: false,
-                //         centerMode: true,
-                //         centerPadding: '40px',
-                //         slidesToShow: 1
-                //     }
-                //     }
-                // ]
+                responsive: [
+                    {
+                    breakpoint: 1200,
+                    settings: {
+                        centerPadding: '40px',
+                        slidesToShow: 2
+                    }
+                    },
+                    {
+                    breakpoint: 767,
+                    settings: {
+                        centerPadding: '20px',
+                        slidesToShow: 1
+                    }
+                    }
+                ]
                 });
             });
     </script>
