Added the Spikmi

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
     <script src="./assets/js/main.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="https://spikmi.org/Widget?Id=3993"></script>
     <script>
         $(document).ready(function() {
             $('.reviews-slider').slick({
