--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="./../"><span>i</span>hlas<span>S</span>ervise</a>
+                    <a href="./../"><span>i</span>hlas<span>S</span>ervice</a>
                 </div>
                 <ul>
                     <li><a class="active" href="#about">About us</a></li>
@@ -412,7 +412,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="logo">
-                    <a href="./../"><span>i</span>hlas<span>S</span>ervise</a>
+                    <a href="./../"><span>i</span>hlas<span>S</span>ervice</a>
                 </div>
                 <div class="footer-links">
                     <ul>
@@ -430,6 +430,7 @@
     <script src="./../assets/js/main.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="https://spikmi.org/Widget?Id=3993"></script>
     <script>
         $(document).ready(function() {
             $('.reviews-slider').slick({
