--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="./"><span>i</span>hlas<span>S</span>ervise</a>
+                    <a href="./"><span>i</span>hlas<span>S</span>ervice</a>
                 </div>
                 <ul>
                     <li><a class="active" href="#about">О нас</a></li>
@@ -413,7 +413,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="logo">
-                    <a href="./"><span>i</span>hlas<span>S</span>ervise</a>
+                    <a href="./"><span>i</span>hlas<span>S</span>ervice</a>
                 </div>
                 <div class="footer-links">
                     <ul>
