--- a/index.html
+++ b/index.html
@@ -428,6 +428,16 @@
         <p>Все права защищены &copy;, Бишкек 2023, "Ихлас-Сервис".</p>
     </footer>
 
+    <div class="mobile-menu">
+        <div class="mobile-menu__content">
+            <ul>
+                <li><a href="">О нас</a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </div>
+    </div>
     <script src="./assets/js/main.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
