--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <p>Все права защищены &copy;, Бишкек 2023, "Ихлас-Сервис".</p>
     </footer>
 
-    <div class="mobile-menu">
+    <div class="mobile-menu active">
         <div class="mobile-menu__content">
             <ul>
                 <li><a href="">О нас</a></li>
