Added the mobile menu to english page

--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="./../"><span>i</span>hlas<span>S</span>ervice</a>
+                    <a href="./"><span>i</span>hlas<span>S</span>ervice</a>
                 </div>
                 <ul>
                     <li><a class="active" href="#about">About us</a></li>
@@ -426,6 +426,20 @@
         </div>
         <p>All rights reserved &copy;, Bishkek 2023, "Ihlas-Service".</p>
     </footer>
+
+    <div class="mobile-menu">
+        <div class="mobile-menu__content">
+            <div class="logo">
+                <a href="./"><span>i</span>hlas<span>S</span>ervice</a>
+            </div>
+            <ul>
+                <li><a href="#about">About us</a></li>
+                <li><a href="#services">Our services</a></li>
+                <li><a href="#reviews">Reviews</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </div>
+    </div>
 
     <script src="./../assets/js/main.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
